force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Producto</label>
    <nameField>
        <displayFormat>PRO-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>