force-app/main/default/objects/Product__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <label>Dimensiones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>