force-app/main/default/objects/Product__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Familia</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Family</valueSetName>
    </valueSet>
</CustomField>