force-app/main/default/objects/Product__c/fields/Inventory_State__c.field-meta.xml
<CustomField>
    <fullName>Inventory_State__c</fullName>
    <formula>IF( Stock__c &lt; (Stock_Maximum__c -  Stock_Minimum__c) * 0.15 , &quot;Solicitar Material&quot;, 
 IF( Stock__c &lt; (Stock_Maximum__c -  Stock_Minimum__c) * 0.50 , &quot;Planificar Pedido&quot;, &quot;Inventario Suficiente&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado en Inventario</label>
    <type>Text</type>
</CustomField>