force-app/main/default/objects/Product__c/fields/Old_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Code__c</fullName>
    <label>Código Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>