force-app/main/default/objects/Product__c/fields/Price_GTQ__c.field-meta.xml
<CustomField>
    <fullName>Price_GTQ__c</fullName>
    <formula>Related_Price__r.Unit_Price_GTQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de Venta (Q)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>