force-app/main/default/objects/Product__c/fields/Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Price_USD__c</fullName>
    <formula>Related_Price__r.Unit_Price_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de Venta ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>