force-app/main/default/objects/Product__c/fields/Related_Price__c.field-meta.xml
<CustomField>
    <fullName>Related_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Precio Relacionado</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El precio seleccionado no corresponde al producto.</errorMessage>
        <filterItems>
            <field>Product_Price__c.Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Price__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>