force-app/main/default/objects/Product__c/fields/Stock_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Stock_Maximum__c</fullName>
    <label>Stock Máximo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>