force-app/main/default/objects/Product__c/fields/Stock_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Stock_Minimum__c</fullName>
    <label>Stock Mínimo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>