force-app/main/default/objects/Product__c/fields/Subfamily__c.field-meta.xml
<CustomField>
    <fullName>Subfamily__c</fullName>
    <label>Subfamilia</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Subfamily</valueSetName>
    </valueSet>
</CustomField>