force-app/main/default/objects/Product__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unidad de Medida</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subfamily__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>unit</valueSetName>
    </valueSet>
</CustomField>