force-app/main/default/objects/Product__c/validationRules/Minimum_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>Stock_Minimum__c &gt;  Stock_Maximum__c</errorConditionFormula>
    <errorMessage>El Stock Mínimo no puede ser mayor al Stock Máximo.</errorMessage>
</ValidationRule>