force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Brand__c</columns>
    <columns>Family__c</columns>
    <columns>Subfamily__c</columns>
    <columns>Dimensions__c</columns>
    <columns>Unit__c</columns>
    <columns>Stock__c</columns>
    <columns>Inventory_State__c</columns>
    <columns>Price_GTQ__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>